Fix glitch where transaction type buttons always visible at startup

--- a/point_of_sale/static/src/css/pos.css
+++ b/point_of_sale/static/src/css/pos.css
@@ -222,7 +222,9 @@
 }
 
 /*  c) The session buttons */
-
+#refund-mode-button,#write-on-mode-button,#write-off-mode-button {
+	display:none;
+}
 .point-of-sale #rightheader .header-button{
     float:right;
     height:32px;
